erDiagram
    Users ||--o{ UserRoles : "has"
    Roles ||--o{ UserRoles : "assigned to"
    Users ||--o| Students : "profile of"
    Users ||--o| Instructors : "profile of"

    Departments ||--o{ Students : "belongs to"
    Departments ||--o{ Instructors : "belongs to"
    Departments ||--o{ CourseDepartments : "offers"
    Courses ||--o{ CourseDepartments : "categorized under"

    StudentStatuses ||--o{ Students : "status"
    InstructorStatuses ||--o{ Instructors : "status"
    CourseStatuses ||--o{ Courses : "status"
    OfferingStatuses ||--o{ CourseOfferings : "status"
    EnrollmentStatuses ||--o{ Enrollments : "status"
    AttendanceStatuses ||--o{ Attendance : "status"

    Courses ||--o{ CoursePrerequisites : "requires"
    Courses ||--o{ CoursePrerequisites : "is prerequisite for"
    Courses ||--o{ CourseOfferings : "instantiated as"

    Semesters ||--o{ CourseOfferings : "offered in"
    CourseOfferings ||--o{ CourseOfferingInstructors : "taught by"
    Instructors ||--o{ CourseOfferingInstructors : "teaches"

    CourseOfferings ||--o{ CourseSchedules : "scheduled at"
    Rooms ||--o{ CourseSchedules : "located in"
    CourseSchedules ||--o{ Lectures : "generates"

    Students ||--o{ Enrollments : "enrolls in"
    CourseOfferings ||--o{ Enrollments : "contains"

    Lectures ||--o{ Attendance : "recorded for"
    Students ||--o{ Attendance : "attends"
    Students ||--o{ StudentHolds : "holds placed on"

    Users {
        int UserId PK
        string Email UK
        string PasswordHash
        tinyint IsActive
        datetime CreatedAt
        datetime UpdatedAt
    }

    Roles {
        int RoleId PK
        string RoleName UK
        string Description
    }

    UserRoles {
        int UserId PK,FK
        int RoleId PK,FK
        datetime AssignedAt
    }

    Departments {
        int DepartmentId PK
        string DepartmentCode UK
        string DepartmentName
        datetime CreatedAt
    }

    StudentStatuses {
        int StudentStatusId PK
        string StatusName UK
        string Description
    }

    Students {
        int StudentId PK
        int UserId FK,UK
        int DepartmentId FK
        int StudentStatusId FK
        string StudentNumber UK
        string FirstName
        string MiddleName
        string LastName
        string NationalId UK
        date DateOfBirth
        string Gender
        string PhoneNumber
        string Address
        date AdmissionDate
        int AcademicLevel
        decimal GPA
        int CompletedCreditHours
        datetime CreatedAt
        datetime UpdatedAt
    }

    InstructorStatuses {
        int InstructorStatusId PK
        string StatusName UK
        string Description
    }

    Instructors {
        int InstructorId PK
        int UserId FK,UK
        int DepartmentId FK
        int InstructorStatusId FK
        string EmployeeNumber UK
        string FirstName
        string MiddleName
        string LastName
        string AcademicTitle
        decimal Salary
        date HireDate
        datetime CreatedAt
        datetime UpdatedAt
    }

    CourseStatuses {
        int CourseStatusId PK
        string StatusName UK
        string Description
    }

    Courses {
        int CourseId PK
        string CourseCode UK
        string CourseName
        int CreditHours
        string DifficultyLevel
        int CourseStatusId FK
        datetime CreatedAt
        datetime UpdatedAt
    }

    CourseDepartments {
        int CourseId PK,FK
        int DepartmentId PK,FK
    }

    CoursePrerequisites {
        int CourseId PK,FK
        int PrerequisiteCourseId PK,FK
    }

    Semesters {
        int SemesterId PK
        string SemesterName
        int AcademicYear
        date StartDate
        date EndDate
        tinyint IsCurrent
    }

    Rooms {
        int RoomId PK
        string RoomNumber UK
        string BuildingName
        int Capacity
    }

    OfferingStatuses {
        int OfferingStatusId PK
        string StatusName UK
        string Description
    }

    CourseOfferings {
        int CourseOfferingId PK
        int CourseId FK
        int SemesterId FK
        int OfferingStatusId FK
        string SectionNumber
        int Capacity
        datetime CreatedAt
    }

    CourseOfferingInstructors {
        int CourseOfferingId PK,FK
        int InstructorId PK,FK
        tinyint IsPrimary
    }

    EnrollmentStatuses {
        int EnrollmentStatusId PK
        string StatusName UK
        string Description
    }

    Enrollments {
        int EnrollmentId PK
        int StudentId FK
        int CourseOfferingId FK
        int EnrollmentStatusId FK
        datetime RegistrationDate
        decimal TotalGrade
        string LetterGrade
        decimal GradePoints
    }

    CourseSchedules {
        int CourseScheduleId PK
        int CourseOfferingId FK
        int RoomId FK
        int DayOfWeek
        time StartTime
        time EndTime
    }

    Lectures {
        int LectureId PK
        int CourseScheduleId FK
        date LectureDate
        string Topic
    }

    AttendanceStatuses {
        int AttendanceStatusId PK
        string StatusName UK
    }

    Attendance {
        int AttendanceId PK
        int LectureId FK
        int StudentId FK
        int AttendanceStatusId FK
        string Remarks
    }

    StudentHolds {
        int StudentHoldId PK
        int StudentId FK
        string HoldType
        string Reason
        datetime PlacedDate
        datetime ReleasedDate
        tinyint IsActive
    }
